# functional

./: README.md
ocaml/: .gitignore  README.md
ocaml/datastructures/: datastructures.opam  dune-project
ocaml/datastructures/lib/: datastructures.ml  dune  tlist.ml
ocaml/datastructures/test/: dune  tlist_test.ml
ocaml/ocaml-prog-book/: ch2.ml  ch3.ml
rs/src/: main.rs
scala/: build.sbt
