(lang dune 3.16)

(name datastructures)

(generate_opam_files true)

(package
 (name datastructures)
 (synopsis "Functional data structures in OCaml")
 (description "Implementation of functional data structures List and Tree")
 (depends ocaml dune)
 (tags
  (functional datastructures ocaml)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
